--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "mpratt/embera": "~2.0"
+        "mpratt/embera": "~2.0",
+        "phpmailer/phpmailer": "^6.7"
     }
 }
